Criação da parte funcional do questionario usando PHP

--- a/QuestionarioHTML/site_formato2/Questionario.html
+++ b/QuestionarioHTML/site_formato2/Questionario.html
@@ -22,7 +22,7 @@
      <div class="questoes">
       <h2>Selecione a tradução correta:</h2>
       <br>
-      <form method = "post" action="">
+      <form method = "post" action="responses.php">
         <p> 1) I have a WHITE pencil.</p>
         <div class="respos">
           <label>
@@ -278,7 +278,7 @@
           <br />
           <br />
         </div>
-        <p> 18) IMAGEM DE UMA RÉGUA.</p>
+        <p> 18)</p>
         <br>
         <img src="regua.jpg" alt="IMAGEM DE UMA RÉGUA">
         <br>
@@ -301,17 +301,17 @@
           <br/>
           <label>
           <label>
-          <input type="radio" name="questao17" value="f" /> F) an eraser.</label>
+          <input type="radio" name="questao18" value="f" /> F) an eraser.</label>
           <br/>
           <label>
           <label>
-          <input type="radio" name="questao17" value="g" /> G) a briefcase.</label>
+          <input type="radio" name="questao18" value="g" /> G) a briefcase.</label>
           <br/>
           <label>
           <br/>
           <br/>
         </div>
-        <p> 19) IMAGEM DE UM GUARDA-CHUVA.</p>
+        <p> 19)</p>
         <br>
         <img src="guardachuva.jpg" alt="IMAGEM DE UM GUARDA-CHUVA">
         <br>
